started work on pug stuff

--- a/Web/webserver/package.json
+++ b/Web/webserver/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "ip": "^1.1.4",
+    "pug": "^2.0.0-beta6",
     "socket.io": "^1.5.1"
   }
 }
