--- a/Android/SmartShopper/app/build.gradle
+++ b/Android/SmartShopper/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
+    compile files('E:/3rdYear/cpen321/cpen_321/Android/SmartShopper/libs/picasso-2.5.2.jar')
 }
