--- a/Web/webserver/package.json
+++ b/Web/webserver/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "ip": "^1.1.4",
+    "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta6",
     "socket.io": "^1.5.1"
   }
