--- a/Android/SmartShopper/app/build.gradle
+++ b/Android/SmartShopper/app/build.gradle
@@ -27,6 +27,7 @@ android {
 
 
 
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -40,4 +41,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
+    compile files('C:/Users/JohnS/Desktop/cpen_321/Android/SmartShopper/libs/commons-lang-2.6.jar')
 }
