--- a/Android/SmartShopper/app/build.gradle
+++ b/Android/SmartShopper/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.0.+'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
     compile files('C:/Users/JohnS/Desktop/cpen_321/Android/SmartShopper/libs/commons-lang-2.6.jar')
