--- a/Web/webserver/package.json
+++ b/Web/webserver/package.json
@@ -13,6 +13,7 @@
     "cookie-session": "^2.0.0-alpha.2",
     "express": "^4.14.0",
     "ip": "^1.1.4",
+    "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "pug": "^2.0.0-beta6",
     "socket.io": "^1.5.1"
