--- a/Android/SmartShopper/app/build.gradle
+++ b/Android/SmartShopper/app/build.gradle
@@ -28,6 +28,9 @@ android {
 
 
 
+
+
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -35,12 +38,12 @@ dependencies {
     })
     //compile files('libs/json-simple-1.1.1.jar')
     compile files('C:/Users/JohnS/Desktop/cpen_321/Android/SmartShopper/libs/picasso-2.5.2.jar')
+    compile files('C:/Users/JohnS/Desktop/cpen_321/Android/SmartShopper/libs/commons-lang-2.6.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:cardview-v7:23.4.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
-    compile files('C:/Users/JohnS/Desktop/cpen_321/Android/SmartShopper/libs/commons-lang-2.6.jar')
 }
