--- a/Web/webserver/package.json
+++ b/Web/webserver/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-session": "^2.0.0-alpha.2",
+    "debug": "^2.3.2",
     "express": "^4.14.0",
     "ip": "^1.1.4",
     "morgan": "^1.7.0",
