epipe bug commit

--- a/Web/webserver/package.json
+++ b/Web/webserver/package.json
@@ -16,7 +16,6 @@
     "ip": "^1.1.4",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
-    "pug": "^2.0.0-beta6",
-    "socket.io": "^1.5.1"
+    "pug": "^2.0.0-beta6"
   }
 }
