updated webserver to connect to main server only when sending a request; works for mock, request hangs for real main server

--- a/Web/webserver/package.json
+++ b/Web/webserver/package.json
@@ -4,7 +4,8 @@
   "description": "The webserver that connects the website to the mainserver",
   "main": "webserver.js",
   "scripts": {
-    "tests": "node_modules/.bin/nightwatch"
+    "tests": "node_modules/.bin/nightwatch",
+    "postinstall": "node nightwatch.conf.js"
   },
   "author": "",
   "license": "ISC",
