--- a/Android/SmartShopper/app/build.gradle
+++ b/Android/SmartShopper/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -22,20 +23,6 @@ android {
         unitTests.returnDefaultValues = true
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -50,6 +37,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.google.android.gms:play-services:10.0.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
 }
