--- a/Web/package.json
+++ b/Web/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bootstrap-select": "^1.12.1",
     "cookie-session": "^2.0.0-alpha.2",
     "express": "^4.14.0",
     "pug": "^2.0.0-beta6",
